--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PASSPORT_SECRET="貓貓讚讚"
 MONGODB_CONNECTION="mongodb+srv://yutinghu813:PebbrDxBPiWSA8A1@cluster0.qxaii4g.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+NODE_ENV="production"
