--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.3",
     "joi": "^17.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.6",
+    "nodemon": "^3.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-scripts": "^5.0.1"
   },
   "engines": {
     "node": "18.12.0"
