--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "client": "npm start --prefix client",
     "clientinstall": "npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "render-postbuild": "npm install --prefix client && npm run build --prefix client && mkdir -p build && cp -r client/build/* build/",
     "install-react": "cd client && npm install react react-dom"
   },
   "author": "",
