make changes for depolyment

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -10,15 +10,16 @@
     "client": "npm start --prefix client",
     "clientinstall": "npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "render-postbuild": "npm install --prefix client && npm run build --prefix client && mkdir -p build && cp -r client/build/* build/",
-    "install-react": "cd client && npm install react react-dom"
+    "render-postbuild": "npm install --prefix client && npm run build --prefix client && mkdir -p build && cp -r client/build/* build/"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "browserify-zlib": "^0.2.0",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.3",
     "joi": "^17.6.3",
@@ -28,7 +29,12 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "react-scripts": "^5.0.1"
+    "path-browserify": "^1.0.1",
+    "querystring-es3": "^0.2.1",
+    "react-scripts": "^5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.3"
   },
   "engines": {
     "node": "18.12.0"
