--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,19 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
+            "name": "Launch via NPM",
             "request": "launch",
-            "name": "Launch Program",
+            "runtimeArgs": [
+                "run",
+                "dev"
+            ],
+            "runtimeExecutable": "npm",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\index.js"
+            "type": "node"
         }
+       
     ],
     "debug.javascript.terminalOptions": {
         "skipFiles": [
