--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.3",
     "joi": "^17.6.3",
     "jsonwebtoken": "^8.5.1",
+    "lucide-react": "^0.396.0",
     "mongoose": "^6.6.6",
     "nodemon": "^3.1.0",
     "passport": "^0.6.0",
@@ -31,6 +32,7 @@
     "passport-local": "^1.0.0",
     "path-browserify": "^1.0.1",
     "querystring-es3": "^0.2.1",
+    "react-icons": "^5.2.1",
     "react-scripts": "^5.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
