--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "client": "npm start --prefix client",
     "clientinstall": "npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "render-postbuild": "npm install --prefix client && npm run build --prefix client && (if not exist build mkdir build) && xcopy /E /I /Y client\\build\\* build\\"
+     "render-postbuild": "npm install --prefix client && npm run build --prefix client && mkdir -p build && cp -r client/build/* build/"
   },
   "author": "",
   "license": "ISC",
