--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,12 +1,19 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+OS / editor
+.DS_Store
+Thumbs.db
+.vscode/
+
+Logs
+.log
+npm-debug.log
+yarn-debug.log*
+yarn-error.log*
+
 
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-.env
-.env.development
-.env.production
 
 # testing
 /coverage
@@ -14,13 +21,13 @@
 # production
 /build
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# ── Env files (root + all subdirs) ─────────────────────────────
+.env
+.env.*
+!.env.example           # 保留範例檔（任何資料夾都會生效）
+!client/.env.example
+!server/.env.example
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
+# Build
+client/build/
