--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server:debug": "nodemon --inspect server.js",
     "dev:debug": "concurrently \"npm run server:debug\" \"npm run client\"",
-    "render-postbuild": "npm install --prefix client && npm run build --prefix client && mkdir -p build && cp -r client/build/* build/"
+    "render-postbuild": "npm install --prefix client && npm run build --prefix client && node scripts/render-postbuild.js"
   },
   "author": "",
   "license": "ISC",
