--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server:debug": "nodemon --inspect server.js",
     "dev:debug": "concurrently \"npm run server:debug\" \"npm run client\"",
-    "render-postbuild": "npm install --prefix client && npm run build --prefix client && node scripts/render-postbuild.js",
+    "build": "npm install --prefix client && npm run build --prefix client && node scripts/render-postbuild.js",
     "lint": "eslint . && npm run lint --prefix client",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
